freshman first commit

--- a/file.html
+++ b/file.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav>leader is in charge</nav>
-    <main></main>
+    <main>this is freshman charge hello i am making my first project</main>
     <footer></footer>
   </body>
 </html>
